# snareclaw-py

./: .gitignore  README.md  install.sh  pyproject.toml  snare.toml
Formula/: snareclaw.rb
npm/: README.md  package.json
src/snareclaw/: __init__.py  alerts.py  cli.py  daemon.py  db.py  feed.py  interactive.py  rules.py  secrets.py  verifier.py  watcher.py
