[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snareclaw"
version = "0.1.0"
description = "Ambient supply chain security monitor for Python environments"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Eli / OpenClaw" },
]
dependencies = [
    "watchdog>=4.0",
    "click>=8.0",
    "httpx>=0.27",
    "tomli>=2.0; python_version < '3.11'",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
snare = "snareclaw.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/snareclaw"]
